# karaoke-backend

./: .gitignore  README.md  build_files.sh  pyproject.toml  vercel.json
.vercel/: project.json
django/: vercel.json
django/backend/: asgi.py  settings.py  urls.py  wsgi.py
django/core/api/v1/: urls.py
django/core/migrations/: 0003_alter_song_unique_together_song_youtube_link_and_more.py
django/fixtures/: data.json
karaoke/: .gitignore  README.md  vercel.json
karaoke/backend/: settings.py  urls.py  wsgi.py
karaoke/core/: admin.py  models.py
karaoke/core/api/v1/: filters.py  serializers.py  views.py
karaoke/core/manage/: seed.json
karaoke/core/migrations/: 0001_initial.py  0002_remove_playlistitem_name.py  0004_alter_song_unique_together_song_with_voice_and_more.py  0005_rename_value_genre_name_rename_value_language_name_and_more.py
